// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`given invalid frontmatter for / should not render a CSP 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <title>
      Markdown Home
    </title>
  </head>
</html>
<body>
  <h2 id="Home">
    Home
  </h2>
</body>
`;

exports[`given invalid frontmatter for markdown-1 should not render a CSP 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <title>
      Markdown 1
    </title>
  </head>
</html>
<body>
  <h1>
    Markdown 1
  </h1>
</body>
`;

exports[`given mixed mode policies and env=dev for / should merge and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://frontmatter-home-default.com; img-src https://frontmatter-home-img.com"
    >
    <title>
      Markdown Home
    </title>
  </head>
  <body>
    <h2 id="Home">
      Home
    </h2>
  </body>
</html>
`;

exports[`given mixed mode policies and env=dev for markdown-1 should merge and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="img-src https://dev-markdown-1-img.com https://frontmatter-markdown-1-img-1.com https://frontmatter-markdown-1-img-2.com; default-src https://frontmatter-markdown-1-default-1.com https://frontmatter-markdown-1-default-2.com"
    >
    <title>
      Markdown 1
    </title>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;

exports[`given mixed mode policies and env=dev for markdown-2 should merge and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://dev-markdown-2-default-1.com https://dev-markdown-2-default-2.com https://frontmatter-markdown-2-default-1.com https://frontmatter-markdown-2-default-2.com; img-src https://dev-markdown-2-img.com https://frontmatter-markdown-2-img-1.com https://frontmatter-markdown-2-img-2.com"
    >
    <title>
      Markdown 2
    </title>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;

exports[`given mixed mode policies and env=prod for / should merge and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://prod-frontmatter-home-default.com; img-src https://prod-frontmatter-home-img.com"
    >
    <title>
      Markdown Home
    </title>
  </head>
  <body>
    <h2 id="Home">
      Home
    </h2>
  </body>
</html>
`;

exports[`given mixed mode policies and env=prod for markdown-1 should merge and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://prod-markdown-1-default-1.com https://prod-markdown-1-default-2.com https://frontmatter-markdown-1-default-1.com https://frontmatter-markdown-1-default-2.com; img-src https://prod-markdown-1-img.com https://frontmatter-markdown-1-img-1.com https://frontmatter-markdown-1-img-2.com"
    >
    <title>
      Markdown 1
    </title>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;

exports[`given mixed mode policies and env=prod for markdown-2 should merge and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="img-src https://prod-markdown-2-img.com https://frontmatter-markdown-2-img-1.com https://frontmatter-markdown-2-img-2.com; default-src https://frontmatter-markdown-2-default-1.com https://frontmatter-markdown-2-default-2.com"
    >
    <title>
      Markdown 2
    </title>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;

exports[`given replace mode policies and env=dev for / should replace where appropriate and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://prod-config-index-default.com https://dev-frontmatter-home-default.com; img-src https://dev-frontmatter-home-img.com"
    >
    <title>
      Markdown Home
    </title>
  </head>
  <body>
    <h2 id="Home">
      Home
    </h2>
  </body>
</html>
`;

exports[`given replace mode policies and env=dev for markdown-1 should replace where appropriate and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://dev-frontmatter-markdown-1-default-1.com https://dev-frontmatter-markdown-1-default-2.com; img-src https://dev-frontmatter-markdown-1-img-1.com https://dev-frontmatter-markdown-1-img-2.com"
    >
    <title>
      Markdown 1
    </title>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;

exports[`given replace mode policies and env=dev for markdown-2 should replace where appropriate and render the given policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://dev-frontmatter-markdown-2-default-1.com https://dev-frontmatter-markdown-2-default-2.com; img-src https://dev-frontmatter-markdown-2-img-1.com https://dev-frontmatter-markdown-2-img-2.com"
    >
    <title>
      Markdown 2
    </title>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;

exports[`given the custom permalink / should ignore the dirname and use only the basename: / 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://prod-index-default.com"
    >
    <title>
      Markdown Home
    </title>
  </head>
  <body>
    <h1>
      Home
    </h1>
  </body>
</html>
`;

exports[`given the custom permalink 2001/01/01/markdown-1 should ignore the dirname and use only the basename: markdown-1 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://prod-markdown-1-default-1.com"
    >
    <title>
      Markdown 1
    </title>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;

exports[`given the custom permalink page-1/ should ignore the dirname and use only the basename: page-1 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://prod-page-1-default-1.com"
    >
    <title>
      Page 1
    </title>
  </head>
  <body>
    <h1>
      Page 1
    </h1>
  </body>
</html>
`;

exports[`given the path "/" should only match against the "/" policy path 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://single-slash.com"
    >
    <title>
      Markdown Home
    </title>
  </head>
  <body>
    <h1>
      Home
    </h1>
  </body>
</html>
`;

exports[`given the path "/index.html" should only match against the "/" policy path 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://single-slash.com"
    >
    <title>
      Markdown Home
    </title>
  </head>
  <body>
    <h1>
      Home
    </h1>
  </body>
</html>
`;

exports[`given the path "index.html" should only match against the "/" policy path 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://single-slash.com"
    >
    <title>
      Markdown Home
    </title>
  </head>
  <body>
    <h1>
      Home
    </h1>
  </body>
</html>
`;

exports[`when inline tag sources are enabled path: "/" should contain a hash+base64 source for each script/style, that merges with existing policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://frontmatter-home-default.com; script-src 'sha512-3j6cx4PFZZIQUupS7jwCN4QaghpVb95Q8mEsah38HTHT0BlCLn9pu8BDrMp0wT1kgpW2FE4H2cIXWE/dacTH0Q==' 'sha512-Mo2IittpCyzD+z7uC8fxA/AqYkcaSvAuqt0y2w0nIyWz+1lEQ5sKEEogY6vtxY+buvX+XPralLurIdDePvvokA=='; style-src 'sha512-xV3jXpd2QNEn/5AgkQKlit9GPjzfN2s5fFImBFKUe83y5/2KtaLxFvHBgvBEueD2DUnvwv1sCWofshvXJQGLmQ==' 'sha512-cbozKx9JFPkwg4AqdeM3KO0f5pA7gjKKGneGI9TFFOWxzPx+rsPdzihgqCd5UZFC2knhfiq/x2eD5gi5htkxlw=='"
    >
    <title>
      Markdown Home
    </title>
    <script>
      const a = 1;
    </script>
    <script>
      const b = 1;
const c = 1;
    </script>
    <style>
      div { color: red; }
    </style>
    <style>
      div {
  color: blue;
}
    </style>
  </head>
  <body>
    <h2 id="Home">
      Home
    </h2>
  </body>
</html>
`;

exports[`when inline tag sources are enabled path: "markdown-1" should contain a hash+base64 source for each script/style, that merges with existing policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://prod-markdown-1-default-1.com https://frontmatter-markdown-1-default-1.com; script-src 'sha512-3j6cx4PFZZIQUupS7jwCN4QaghpVb95Q8mEsah38HTHT0BlCLn9pu8BDrMp0wT1kgpW2FE4H2cIXWE/dacTH0Q==' 'sha512-Mo2IittpCyzD+z7uC8fxA/AqYkcaSvAuqt0y2w0nIyWz+1lEQ5sKEEogY6vtxY+buvX+XPralLurIdDePvvokA=='; style-src 'sha512-xV3jXpd2QNEn/5AgkQKlit9GPjzfN2s5fFImBFKUe83y5/2KtaLxFvHBgvBEueD2DUnvwv1sCWofshvXJQGLmQ==' 'sha512-cbozKx9JFPkwg4AqdeM3KO0f5pA7gjKKGneGI9TFFOWxzPx+rsPdzihgqCd5UZFC2knhfiq/x2eD5gi5htkxlw=='"
    >
    <title>
      Markdown 1
    </title>
    <script>
      const a = 1;
    </script>
    <script>
      const b = 1;
const c = 1;
    </script>
    <style>
      div { color: red; }
    </style>
    <style>
      div {
  color: blue;
}
    </style>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;

exports[`when inline tag sources are enabled path: "markdown-2" should contain a hash+base64 source for each script/style, that merges with existing policies 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="img-src https://frontmatter-markdown-2-img-1.com; script-src 'sha512-3j6cx4PFZZIQUupS7jwCN4QaghpVb95Q8mEsah38HTHT0BlCLn9pu8BDrMp0wT1kgpW2FE4H2cIXWE/dacTH0Q==' 'sha512-Mo2IittpCyzD+z7uC8fxA/AqYkcaSvAuqt0y2w0nIyWz+1lEQ5sKEEogY6vtxY+buvX+XPralLurIdDePvvokA=='; style-src 'sha512-xV3jXpd2QNEn/5AgkQKlit9GPjzfN2s5fFImBFKUe83y5/2KtaLxFvHBgvBEueD2DUnvwv1sCWofshvXJQGLmQ==' 'sha512-cbozKx9JFPkwg4AqdeM3KO0f5pA7gjKKGneGI9TFFOWxzPx+rsPdzihgqCd5UZFC2knhfiq/x2eD5gi5htkxlw=='"
    >
    <title>
      Markdown 2
    </title>
    <script>
      const a = 1;
    </script>
    <script>
      const b = 1;
const c = 1;
    </script>
    <style>
      div { color: red; }
    </style>
    <style>
      div {
  color: blue;
}
    </style>
  </head>
  <body>
    <h1>
      Markdown 1
    </h1>
  </body>
</html>
`;
